--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1410,10 +1410,10 @@ figure, picture, img {
   color: #121f2b;
 }
 .page-home .grid-item-photography a {
-  color: #8f9eb8;
+  color: #9facc2;
 }
 .page-home .grid-item-photography a:focus {
-  text-decoration-color: #8f9eb8;
+  text-decoration-color: #9facc2;
 }
 .page-home .grid-item-graphic {
   background: #c46465;
@@ -1437,6 +1437,7 @@ figure, picture, img {
 }
 .page-home .grid-item-writing {
   background: #efd6cf;
+  color: #263238;
 }
 .page-home .grid-item-writing h2 {
   padding: 12px calc(18px + env(safe-area-inset-left));
